crates/loxia-tui/src/modals/snapshots/loxia_tui__modals__device_picker__tests__device_picker_snapshot.snap
---
source: crates/loxia-tui/src/modals/device_picker.rs
assertion_line: 438
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 90, height: 20 },
    content: [
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "        ┌SELECT AUDIO OUTPUT DEVICE──────────────────────────────────────────────┐        ",
        "        │Active Engine: libmpv                                                   │        ",
        "        │────────────────────────────────────────────────────────────────────────│        ",
        "        │ALSA                                                                    │        ",
        "        │  • Direct Hardware Passthrough (hw:0,0)                                │        ",
        "        │PipeWire                                                                │        ",
        "        │▸ ○ Default System Output Sink (Shared)                                 │        ",
        "        │PulseAudio                                                              │        ",
        "        │  ○ USB Headphones DAC                                                  │        ",
        "        │                                                                        │        ",
        "        │[ Enter ] Switch    [ Esc ] Cancel                                      │        ",
        "        └────────────────────────────────────────────────────────────────────────┘        ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 9, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 10, fg: Indexed(15), bg: Indexed(4), underline: Reset, modifier: NONE,
        x: 81, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 11, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 13, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 14, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 14, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 14, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 15, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
