crates/loxia-tui/src/modals/snapshots/loxia_tui__modals__device_picker__tests__device_picker_snapshot_loading.snap
---
source: crates/loxia-tui/src/modals/device_picker.rs
assertion_line: 474
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 90, height: 20 },
    content: [
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "        ┌SELECT AUDIO OUTPUT DEVICE──────────────────────────────────────────────┐        ",
        "        │Active Engine: libmpv                                                   │        ",
        "        │────────────────────────────────────────────────────────────────────────│        ",
        "        │Loading…                                                                │        ",
        "        │                                                                        │        ",
        "        │[ Enter ] Switch    [ Esc ] Cancel                                      │        ",
        "        └────────────────────────────────────────────────────────────────────────┘        ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 9, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 11, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 81, y: 11, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 12, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 82, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
